force-app/main/default/objects/numm__HeaderVoucher__c/numm__HeaderVoucher__c.object-meta.xml
<CustomObject>
    <description>Objet des entêtes de pièce</description>
    <label>Pièce</label>
    <nameField>
        <label>Numéro de pièce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pièces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>