force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingDate__c</fullName>
    <inlineHelpText>La date de pièce est une date d&#39;enregistrement liée à la période comptable</inlineHelpText>
    <label>Date de pièce</label>
    <required>true</required>
    <type>Date</type>
</CustomField>