force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__AssetDate__c.field-meta.xml
<CustomField>
    <fullName>numm__AssetDate__c</fullName>
    <label>Date d&#39;immobilisations</label>
    <type>Date</type>
</CustomField>