force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Baseline__c.field-meta.xml
<CustomField>
    <fullName>numm__Baseline__c</fullName>
    <inlineHelpText>Préciser le numéro de facture Fournisseur lors d&#39;une saisie d&#39;achat pour effectuer les contrôles d&#39;unicité de numéro</inlineHelpText>
    <label>Référence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>