force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__BaselineDate__c.field-meta.xml
<CustomField>
    <fullName>numm__BaselineDate__c</fullName>
    <inlineHelpText>La date d&#39;origine est utilisée pour des factures d&#39;achats afin de préciser la date de facture Fournisseur</inlineHelpText>
    <label>Date d&#39;origine</label>
    <type>Date</type>
</CustomField>