force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__CleRepartition__c.field-meta.xml
<CustomField>
    <fullName>numm__CleRepartition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clé de répartition</label>
    <referenceTo>numm__Cle_de_repartition__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>