force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Cloture__c.field-meta.xml
<CustomField>
    <fullName>numm__Cloture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clôture</label>
    <type>Checkbox</type>
</CustomField>