force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__CreditEcritureGenerale__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditEcritureGenerale__c</fullName>
    <label>Crédit Ecriture Générale</label>
    <summarizedField>numm__VoucherTransaction__c.numm__Credit__c</summarizedField>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>