force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__CreditEntiteEcritureGenerale7__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditEntiteEcritureGenerale7__c</fullName>
    <label>ZTODEL_Crédit Entité Ecriture Générale 7</label>
    <summarizedField>numm__VoucherTransaction__c.numm__CreditEntity__c</summarizedField>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>