force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__DebitEcritureGenerale__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEcritureGenerale__c</fullName>
    <label>Débit Ecriture Générale</label>
    <summarizedField>numm__VoucherTransaction__c.numm__Debit__c</summarizedField>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>