force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__DebitEntiteEcritureGenerale6__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEntiteEcritureGenerale6__c</fullName>
    <label>ZTODEL_Débit Entité Ecriture Générale 6</label>
    <summarizedField>numm__VoucherTransaction__c.numm__DebitEntity__c</summarizedField>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>