force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__DebitEntiteEcritureGenerale__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEntiteEcritureGenerale__c</fullName>
    <label>Débit Entité Ecriture Générale</label>
    <summarizedField>numm__VoucherTransaction__c.numm__DebitEntity__c</summarizedField>
    <summaryFilterItems>
        <field>numm__VoucherTransaction__c.numm__Tech_StatutPiece__c</field>
        <operation>equals</operation>
        <value>Validé</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>