force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Deposit__c.field-meta.xml
<CustomField>
    <fullName>numm__Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acompte</label>
    <type>Checkbox</type>
</CustomField>