force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__DepositReconcile__c.field-meta.xml
<CustomField>
    <fullName>numm__DepositReconcile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acompte rapprocher</label>
    <type>Checkbox</type>
</CustomField>