force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__DueDate__c.field-meta.xml
<CustomField>
    <fullName>numm__DueDate__c</fullName>
    <label>Date d&#39;échéance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>