force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Equilibre__c.field-meta.xml
<CustomField>
    <fullName>numm__Equilibre__c</fullName>
    <formula>AND(
 numm__CreditEcritureGenerale__c &gt; 0,
 numm__DebitEcritureGenerale__c &gt; 0,
 numm__CreditEcritureGenerale__c = numm__DebitEcritureGenerale__c
)</formula>
    <label>Équilibre</label>
    <type>Checkbox</type>
</CustomField>