force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>PiecesEntetesEta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>