force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Etablissement_origine__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement_origine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement d&#39;origine</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Pièces (Etablissement d&#39;origine)</relationshipLabel>
    <relationshipName>PiecesOrigines</relationshipName>
    <type>Lookup</type>
</CustomField>