force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>numm__ExchangeRate__c</fullName>
    <label>Taux de Change</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>