force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>numm__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>TECH ExternalId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>