force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Facture__c.field-meta.xml
<CustomField>
    <fullName>numm__Facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>numm__InvoiceHeader__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pi_ces</relationshipName>
    <type>Lookup</type>
</CustomField>