force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Flux__c.field-meta.xml
<CustomField>
    <fullName>numm__Flux__c</fullName>
    <formula>TEXT( numm__IdJournal__r.numm__Flux__c )</formula>
    <label>Flux</label>
    <type>Text</type>
</CustomField>