force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__IdJournal__c.field-meta.xml
<CustomField>
    <fullName>numm__IdJournal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>numm__Journal__c</referenceTo>
    <relationshipName>HeaderVoucher</relationshipName>
    <type>Lookup</type>
</CustomField>