force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__IdVatProrata__c.field-meta.xml
<CustomField>
    <fullName>numm__IdVatProrata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prorata de TVA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__VATRate__c.numm__Prorata__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipLabel>Pièces (Prorata de TVA)</relationshipLabel>
    <relationshipName>PiecesEntetes</relationshipName>
    <type>Lookup</type>
</CustomField>