force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Import_Ecritures_banques__c.field-meta.xml
<CustomField>
    <fullName>numm__Import_Ecritures_banques__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Ecritures banques</label>
    <referenceTo>numm__Import_Ecritures_banques__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>