force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>numm__InvoiceAmount__c</fullName>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>