force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__IsCostAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IsCostAccounting__c</fullName>
    <formula>IF(numm__Entity__r.numm__IsCostAccounting__c,&#39;TRUE&#39;,&#39;FALSE&#39;)</formula>
    <label>TECH suivi analytique</label>
    <type>Text</type>
</CustomField>