force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__IsLineDeclaree__c.field-meta.xml
<CustomField>
    <fullName>numm__IsLineDeclaree__c</fullName>
    <label>IsLineDeclaree</label>
    <summaryFilterItems>
        <field>numm__VoucherTransaction__c.numm__DeclareeTVA__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>