force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__IsTVAAchCtl__c.field-meta.xml
<CustomField>
    <fullName>numm__IsTVAAchCtl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Achat Ctrl TVA</label>
    <type>Checkbox</type>
</CustomField>