force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__JournalRole__c.field-meta.xml
<CustomField>
    <fullName>numm__JournalRole__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Il est obligatoire de renseigner un rôle journal</inlineHelpText>
    <label>Journal (Role)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Journal_Role__c.numm__Etablissement__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Etablissement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Journal_Role__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>