force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__LettreePointee__c.field-meta.xml
<CustomField>
    <fullName>numm__LettreePointee__c</fullName>
    <label>LettreePointee</label>
    <summaryFilterItems>
        <field>numm__VoucherTransaction__c.numm__Lettrage_Pointage__c</field>
        <operation>contains</operation>
        <value>Lettrée, Pointée</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>