force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Lot__c.field-meta.xml
<CustomField>
    <fullName>numm__Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lot (établissement)</description>
    <label>Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.numm__Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Pièces (Lot)</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>