force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Montant_TTC_entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Montant_TTC_entite__c</fullName>
    <label>Montant TTC entité</label>
    <summarizedField>numm__VoucherTransaction__c.numm__Solde_ecriture_generale__c</summarizedField>
    <summaryFilterItems>
        <field>numm__VoucherTransaction__c.numm__Tech_Categorie_Compte__c</field>
        <operation>equals</operation>
        <value>TTC</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>