force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__NDF__c.field-meta.xml
<CustomField>
    <fullName>numm__NDF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note de frais</label>
    <referenceTo>numm__NDF__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>