force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__NoDeclaTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__NoDeclaTVA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pièce non déclarable lors de la prochaine déclaration de TVA</description>
    <label>Non déclarable</label>
    <type>Checkbox</type>
</CustomField>