force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Piece_Intra_groupe__c.field-meta.xml
<CustomField>
    <fullName>numm__Piece_Intra_groupe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce Intra groupe</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>