force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__PieceANouveau__c.field-meta.xml
<CustomField>
    <fullName>numm__PieceANouveau__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce A Nouveau</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Pièces (Pièce A Nouveau)</relationshipLabel>
    <relationshipName>PiecesNouveau</relationshipName>
    <type>Lookup</type>
</CustomField>