force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__PieceOrigine__c.field-meta.xml
<CustomField>
    <fullName>numm__PieceOrigine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce d&#39;origine</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Pièces (Pièce d&#39;origine)</relationshipLabel>
    <relationshipName>PiecesDet</relationshipName>
    <type>Lookup</type>
</CustomField>