force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__ReadOnly_KM__c.field-meta.xml
<CustomField>
    <fullName>numm__ReadOnly_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReadOnly KM</label>
    <type>Checkbox</type>
</CustomField>