force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__RgpPiece__c.field-meta.xml
<CustomField>
    <fullName>numm__RgpPiece__c</fullName>
    <formula>if (ISBLANK (numm__PieceOrigine__c) ,Name , numm__PieceOrigine__r.Name   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regroupement Piece</label>
    <type>Text</type>
</CustomField>