force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Role_du_Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Role_du_Tiers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role du Tiers</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Pièces</relationshipLabel>
    <relationshipName>Pieces</relationshipName>
    <type>Lookup</type>
</CustomField>