force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__SettledHeaderNumber__c.field-meta.xml
<CustomField>
    <fullName>numm__SettledHeaderNumber__c</fullName>
    <description>Numéro de la pièce réglé par cette ligne généré par règlement</description>
    <inlineHelpText>Numéro de la pièce réglé par cette ligne généré par règlement</inlineHelpText>
    <label>Numéro de pièce réglé</label>
    <length>80</length>
    <type>Text</type>
</CustomField>