force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Solde__c</fullName>
    <formula>numm__TechTotalDebit__c  -  numm__TechTotalCredit__c</formula>
    <label>Solde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>