force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Supprimé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>