force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_Banque__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Banque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use vf page interface compta</description>
    <label>Banque</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>BAN</value>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Pièces (Banque)</relationshipLabel>
    <relationshipName>PiecesRoleTier</relationshipName>
    <type>Lookup</type>
</CustomField>