force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_Count__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Count__c</fullName>
    <label>Tech_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>