force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Fournisseur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used in page vf interface compta</description>
    <label>Fournisseur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entity__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>FOU, Fournisseur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Pièces (Fournisseur)</relationshipLabel>
    <relationshipName>PiecesFou</relationshipName>
    <type>Lookup</type>
</CustomField>