force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TECH_MatchingNumber__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_MatchingNumber__c</fullName>
    <description>This number is used for after delete trigger as the numero de lettrage on the ecritures is not available after that.</description>
    <label>TECH Numéro de Lettrage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>