force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TECH_MessageTraitement__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_MessageTraitement__c</fullName>
    <label>TECH_MessageTraitement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>