force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_MsgClotureBatch__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_MsgClotureBatch__c</fullName>
    <label>Tech_MsgClotureBatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>