force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_PieceAccompte__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_PieceAccompte__c</fullName>
    <label>Tech_PieceAccompte</label>
    <summaryFilterItems>
        <field>numm__VoucherTransaction__c.numm__Tech_IsAcompteLine__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__VoucherTransaction__c.numm__Piece__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>