force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_Prefix__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Prefix__c</fullName>
    <label>Tech_Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>