force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tech_Valid__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Valid</label>
    <type>Checkbox</type>
</CustomField>