force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TECH_WarningMessages__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_WarningMessages__c</fullName>
    <label>Messages</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>