force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechAvoir__c.field-meta.xml
<CustomField>
    <fullName>numm__TechAvoir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Avoir</label>
    <type>Checkbox</type>
</CustomField>