force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TECHDateReleve__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHDateReleve__c</fullName>
    <label>Date du relevé</label>
    <type>Date</type>
</CustomField>