force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechDateTraitement__c.field-meta.xml
<CustomField>
    <fullName>numm__TechDateTraitement__c</fullName>
    <description>Pour les répartitions</description>
    <label>Date de traitement</label>
    <type>Date</type>
</CustomField>