force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechTotalCredit__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalCredit__c</fullName>
    <description>Utiliser sur la page vf</description>
    <label>Crédit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>