force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechTotalDebit__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalDebit__c</fullName>
    <description>Utiliser sur la page VF</description>
    <label>Débit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>