force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechTotalHT__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalHT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Utiliser sur la page vf</description>
    <label>old_Total HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>