force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TechTotalLignesAnalytiques__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalLignesAnalytiques__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total lignes analytiques</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>