force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Tiers__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  numm__Role_du_Tiers__r.numm__ThirdParty__c ,  numm__Role_du_Tiers__r.numm__ThirdParty__r.Name )</formula>
    <label>Tiers</label>
    <type>Text</type>
</CustomField>