force-app/main/default/objects/numm__HeaderVoucher__c/fields/numm__TTCAmountEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__TTCAmountEntity__c</fullName>
    <formula>numm__InvoiceAmount__c *  numm__ExchangeRate__c</formula>
    <label>Montant TTC  Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>