force-app/main/default/objects/numm__HeaderVoucher__c/recordTypes/numm__Achat.recordType-meta.xml
<RecordType>
    <fullName>numm__Achat</fullName>
    <active>true</active>
    <label>Achat</label>
</RecordType>