force-app/main/default/objects/numm__HeaderVoucher__c/recordTypes/numm__Banque.recordType-meta.xml
<RecordType>
    <fullName>numm__Banque</fullName>
    <active>true</active>
    <label>Banque</label>
</RecordType>