force-app/main/default/objects/numm__HeaderVoucher__c/recordTypes/numm__MouvementBancaire.recordType-meta.xml
<RecordType>
    <fullName>numm__MouvementBancaire</fullName>
    <active>true</active>
    <label>Mouvement bancaire</label>
</RecordType>