force-app/main/default/objects/numm__HeaderVoucher__c/recordTypes/numm__OperationDiverse.recordType-meta.xml
<RecordType>
    <fullName>numm__OperationDiverse</fullName>
    <active>true</active>
    <label>Opération diverse</label>
</RecordType>