force-app/main/default/objects/numm__HeaderVoucher__c/recordTypes/numm__Vente.recordType-meta.xml
<RecordType>
    <fullName>numm__Vente</fullName>
    <active>true</active>
    <label>Vente</label>
</RecordType>